@@ -5,12 +5,17 @@ This file is referred by some automatic release scripts.
 [Release History (Japanese)]
 
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.0.18 2024/4/20
+  <ul>
+    <li>自動リリースをあきらめて署名を復活</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.0.17 2024/4/16
   <ul>
     <li>英語コンフィグファイルの修正(TODO:英語化)</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.0.16 2024/4/16
   <ul>
     <li>Windowsで画面サイズが足りない場合に全画面で起動するように変更</li>
@@ -82,12 +87,17 @@ This file is referred by some automatic release scripts.
 [Release History (English)]
 
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.0.18 2024/4/20
+  <ul>
+    <li>The auto-release system was retired and the code signings revived</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.0.17 2024/4/16
   <ul>
     <li>Modernized the English config files (TODO: translate)</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.0.16 2024/4/16
   <ul>
     <li>Changed to export macOS Xcode project instead of dmg</li>
